; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/gigaset/extr_isocdata.c_gigaset_isoc_receive.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/gigaset/extr_isocdata.c_gigaset_isoc_receive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bc_state = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gigaset_isoc_receive(i8* %0, i32 %1, %struct.bc_state* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.bc_state*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.bc_state* %2, %struct.bc_state** %6, align 8
  %7 = load %struct.bc_state*, %struct.bc_state** %6, align 8
  %8 = getelementptr inbounds %struct.bc_state, %struct.bc_state* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  switch i32 %9, label %15 [
    i32 128, label %10
  ]

10:                                               ; preds = %3
  %11 = load i8*, i8** %4, align 8
  %12 = load i32, i32* %5, align 4
  %13 = load %struct.bc_state*, %struct.bc_state** %6, align 8
  %14 = call i32 @hdlc_unpack(i8* %11, i32 %12, %struct.bc_state* %13)
  br label %20

15:                                               ; preds = %3
  %16 = load i8*, i8** %4, align 8
  %17 = load i32, i32* %5, align 4
  %18 = load %struct.bc_state*, %struct.bc_state** %6, align 8
  %19 = call i32 @trans_receive(i8* %16, i32 %17, %struct.bc_state* %18)
  br label %20

20:                                               ; preds = %15, %10
  ret void
}

declare dso_local i32 @hdlc_unpack(i8*, i32, %struct.bc_state*) #1

declare dso_local i32 @trans_receive(i8*, i32, %struct.bc_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
